--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,50 @@
 {{ define "main" }}
 <section class="bg-white">
   <div class="container">
+    <div class="row justify-content-around align-items-center">
+      <div id="statement" class="col-8 col-md-7 col-lg-6 order-md-2 mb-5 mb-md-0 d-none d-lg-block d-xl-block">
+        <img alt="Image" src="/img/mission.png" class="w-100" />
+      </div>
+      <!--end of col-->
+      <div class="col-12 col-md-8 col-lg-6 order-md-1">
+        <h1 class="display-4">Automated QA for collaborative writing</h1>
+        <span class="lead">
+           Keep your writing concise, consistent, and mistake-free with our
+           quality assurance (QA) software.
+        </span>
+        <a href="#" class="btn btn-primary btn-lg">Learn more</a>
+        <a href="#" class="btn btn-link btn-lg">
+          <i class="icon-controller-play">&nbsp;</i>View Film</a>
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+</section>
+<!--
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <ul class="list-inline list-inline-large">
+          <li class="list-inline-item">
+            <a href="https://github.com/linode/docs"><img alt="Image" height="80" src="/img/logo-linode.png" /></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/cockroachdb/docs"><img alt="Image" height="50" src="/img/logo-cdb.svg" /></a>
+          </li>
+          <li class="list-inline-item">
+             <a href="https://github.com/cloud-elements/devportal"><img alt="Image" height="90" src="/img/logo-ce.png" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+-->
+<section class="bg-white">
+  <div class="container">
       <div class="row justify-content-center text-center section-intro">
         <div class="col-12 col-md-9 col-lg-8">
           <span class="title-decorative">What we do</span>
