[WIP] Landing page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,9 @@
     <script type="text/javascript" src="/js/theme.min.js"></script>
     <script type="text/javascript" src="/js/highlight.pack.js"></script>
 
+    <script type="text/javascript" src="/js/typewriter.js"></script>
+    <script type="text/javascript" src="/js/typewrite.js"></script>
+
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     {{ if isset .Params "code" }}
