--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,17 @@
 {{ define "main" }}
 <section class="bg-white">
   <div class="container">
-    <div class="row justify-content-around align-items-center">
-      <div id="statement" class="col-8 col-md-7 col-lg-6 order-md-2 mb-5 mb-md-0 d-none d-lg-block d-xl-block">
-        <img alt="Image" src="/img/mission.png" class="w-100" />
-      </div>
+    <div class="row justify-content-center align-items-center">
       <!--end of col-->
-      <div class="col-12 col-md-8 col-lg-6 order-md-1">
-        <h1 class="display-4">Automated QA for collaborative writing</h1>
+      <div class="col-6">
+        <h1 class="display-5 text-center">
+          We specialize in <span id="heading"></span>
+        </h1>
         <span class="lead">
            Keep your writing concise, consistent, and mistake-free with our
-           quality assurance (QA) software.
+           quality assurance (QA) software and services.
         </span>
-        <a href="#" class="btn btn-primary btn-lg">Learn more</a>
-        <a href="#" class="btn btn-link btn-lg">
-          <i class="icon-controller-play">&nbsp;</i>View Film</a>
+      </div>
       </div>
       <!--end of col-->
     </div>
@@ -23,19 +20,21 @@
   <!--end of container-->
 </section>
 <!--
-<section>
+<section class="row d-none d-xl-block">
   <div class="container">
-    <div class="row">
+    <div>
       <div class="col-12 text-center">
         <ul class="list-inline list-inline-large">
           <li class="list-inline-item">
-            <a href="https://github.com/linode/docs"><img alt="Image" height="80" src="/img/logo-linode.png" /></a>
+            <a href="https://github.com/linode/docs">
+              <img style="max-height: 90px;" alt="Image" src="/img/linode.svg" />
+            </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/cockroachdb/docs"><img alt="Image" height="50" src="/img/logo-cdb.svg" /></a>
+            <a href="https://github.com/cockroachdb/docs"><img alt="Image" style="max-height: 60px;" src="/img/cockroach-labs.svg" /></a>
           </li>
           <li class="list-inline-item">
-             <a href="https://github.com/cloud-elements/devportal"><img alt="Image" height="90" src="/img/logo-ce.png" /></a>
+             <a href="https://github.com/cloud-elements/devportal"><img style="max-height: 100px;" alt="Image" src="/img/logo-ce.png" /></a>
           </li>
         </ul>
       </div>
@@ -44,90 +43,52 @@
 </section>
 -->
 <section class="bg-white">
-  <div class="container">
-      <div class="row justify-content-center text-center section-intro">
-        <div class="col-12 col-md-9 col-lg-8">
-          <span class="title-decorative">What we do</span>
-          <h2 class="display-4">Open Source</h2>
-          <span class="lead">
-            <b>errata.ai</b> is committed to providing free and open-source software. Our software
-            is run on thousands of documents across multiple companies and organizations.
-          </span>
+  <div class="container u-space-3">
+    <span class="title-decorative text-center">What we do</span>
+    <div class="row">
+      <div class="col-md-4 mb-7">
+        <!-- Icon Blocks -->
+        <div class="text-center px-lg-3">
+          <a href=""><img src="/img/software.svg" alt=""></a>
+          <h3 class="h5"><a href="">Open-source software</a></h3>
+          <p class="mb-md-0">
+            We're committed to providing free and open-source software.
+          </p>
         </div>
+        <!-- End Icon Blocks -->
       </div>
-    <!--end of row-->
-    <ul class="row feature-list feature-list-sm">
 
-      <li class="col-12 col-md-6 col-lg-4">
-        <div class="card">
-          <a href="/vale/getting-started">
-            <img class="card-img-top" src="/img/software/vale.jpg" alt="Card image cap">
-          </a>
-          <div class="card-body">
-              <h4 class="card-title">Vale</h4>
-              <p class="card-text text-body">A syntax-aware linter for prose built with speed and extensibility in mind.</p>
-          </div>
-          <div class="card-footer card-footer-borderless d-flex justify-content-between">
-            <div class="text-small">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <iframe src="https://ghbtns.com/github-btn.html?user=errata-ai&repo=vale&type=star&count=true" frameborder="0" scrolling="0"
-            width="170px" height="20px"></iframe>
-                </li>
-              </ul>
-            </div>
-          </div>
+      <div class="col-md-4 mb-7">
+        <!-- Icon Blocks -->
+        <div class="text-center px-lg-3">
+          <a href=""><img src="/img/integrate.svg" alt=""></a>
+          <h3 class="h5"><a href="">Integration assistence</a></h3>
+          <p class="mb-md-0">
+            We'll help you get set up&mdash;static site generators, CI/CD, etc.
+          </p>
         </div>
-      </li>
-      <!--end of col-->
+        <!-- End Icon Blocks -->
+      </div>
 
-      <li class="col-12 col-md-6 col-lg-4">
-        <div class="card">
-          <a href="https://github.com/errata-ai/blocktest">
-            <img class="card-img-top" src="/img/software/blocktest.jpg" alt="Card image cap">
-          </a>
-          <div class="card-body">
-              <h4 class="card-title">blocktest</h4>
-              <p class="card-text text-body">A command-line tool for managing code snippets in documentation.</p>
-          </div>
-          <div class="card-footer card-footer-borderless d-flex justify-content-between">
-            <div class="text-small">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <iframe src="https://ghbtns.com/github-btn.html?user=errata-ai&repo=blocktest&type=star&count=true" frameborder="0" scrolling="0"
-                    width="170px" height="20px"></iframe>
-                </li>
-              </ul>
-            </div>
-          </div>
+      <div class="col-md-4 mb-7">
+        <!-- Icon Blocks -->
+        <div class="text-center px-lg-3">
+          <a href=""><img src="/img/support.svg" alt=""></a>
+          <h3 class="h5"><a href="">Customization</a></h3>
+          <p class="mb-md-0">
+            We'll work with you to find configuration settings that meet <i>your</i> needs.
+          </p>
         </div>
-      </li>
-      <!--end of col-->
-
-      <li class="col-12 col-md-6 col-lg-4">
-        <div class="card">
-          <a href="https://github.com/jdkato/prose">
-            <img class="card-img-top" src="/img/software/prose.jpg" alt="Card image cap">
-          </a>
-          <div class="card-body">
-              <h4 class="card-title">prose</h4>
-              <p class="card-text text-body">A Golang library for text processing, including tokenization, part-of-speech tagging, and named-entity extraction.</p>
-          </div>
-          <div class="card-footer card-footer-borderless d-flex justify-content-between">
-            <div class="text-small">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <iframe src="https://ghbtns.com/github-btn.html?user=jdkato&repo=prose&type=star&count=true" frameborder="0" scrolling="0"
-                    width="170px" height="20px"></iframe>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
+        <!-- End Icon Blocks -->
+      </div>
+    </div>
+    <img id="pointers" class="img-fluid d-none d-md-block w-75 mx-auto" src="/img/svg-pointer1.svg" alt="SVG Arrow">
+    <div class="w-md-60 w-lg-50 text-center mx-auto mb-7">
+      <h4 class="img-fluid d-none d-md-block w-75 mx-auto">
+        You'll end up with full-featured, easy-to-maintain QA pipeline.
+      </h4>
+    </div>
   </div>
 </section>
-
 <!--end of section-->
 {{ end }}
