--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,13 +3,13 @@
   <div class="container">
     <div class="row justify-content-center align-items-center">
       <!--end of col-->
-      <div class="col-6">
+      <div class="col-lg-6 col-sm-8">
         <h1 class="display-5 text-center">
           We specialize in <span id="heading"></span>
         </h1>
         <span class="lead">
-           Keep your writing concise, consistent, and mistake-free with our
-           quality assurance (QA) software and services.
+           Keep your content concise, consistent, and mistake-free with our
+           quality assurance software and services.
         </span>
       </div>
       </div>
