Fix blog spacing

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner row mx-auto">
         <div class="carousel-item col-md-4 active">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="carousel-item col-md-4">
-          <div class="card">
+          <div class="card showcase-card">
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
