--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,8 @@
   <div class="container">
     <img alt="Image" src="/img/graphic-bg-clouds-5.png" class="bg-image" />
     <div class="row justify-content-center align-items-center">
-      <div class="col-12 col-md-8 col-lg-6 order-md-1">
-        <h1 class="display-4">Automated QA for collaborative writing</h1>
+      <div class="col-12 col-md-6 col-lg-8 order-md-1">
+        <h1 class="display-5">Automated quality assurance for collaborative writing</h1>
         <span class="lead">
           We specialize in
           <span id="heading"></span>
