--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
             <div class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-github"></i>
-                <a href="https://github.com/linode/docs">
+                <a href="https://github.com/gohugoio/hugo">
                   <span class="text-normal">gohugoio /</span> hugo
                 </a>
               </h5>
