Add another software link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -176,8 +176,8 @@
       <div class="col-md-4 mb-7">
         <!-- Icon Blocks -->
         <div class="text-center px-lg-3">
-          <a href="/software/"><img src="/img/software.svg" alt=""></a>
-          <h3 class="h5"><a href="">Open-source software</a></h3>
+          <a href="/software/"><img src="/img/software.svg" alt="Computer screen icon"></a>
+          <h3 class="h5"><a href="/software/">Open-source software</a></h3>
           <p class="mb-md-0">
             We're committed to providing free and open-source software.
           </p>
