--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,6 +15,9 @@
               <a href="/" class="nav-link">About</a>
             </li>
             <li class="nav-item">
+              <a href="/software/" class="nav-link">Software</a>
+            </li>
+            <li class="nav-item">
               <a href="/blog/" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
