New landing page style

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,166 +9,12 @@
           We specialize in
           <span id="heading"></span>
         </span>
-        <a href="#" class="btn btn-primary btn-lg">Learn more</a>
+        <a href="#" class="btn btn-primary btn-lg">Get started now</a>
       </div>
     </div>
   </div>
 </section>
-<section class="bordered">
-  <div class="container">
-    <span class="title-decorative text-center">Who we help</span>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner row mx-auto">
-        <div class="carousel-item col-md-4 active">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/linode/docs">
-                  <span class="text-normal">linode /</span> docs
-                </a>
-              </h5>
-              <p class="card-text">Linode guides and tutorials.</p>
-            </div>
-            <div class="card-footer">
-              <a class="github-button" href="https://github.com/linode/docs" data-icon="octicon-star" data-show-count="true" aria-label="Star linode/docs on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/gohugoio/hugo">
-                  <span class="text-normal">gohugoio /</span> hugo
-                </a>
-              </h5>
-              <p class="card-text">The world’s fastest framework for building websites.</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/gohugoio/hugo" data-icon="octicon-star" data-show-count="true" aria-label="Star gohugoio/hugo on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">prose</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/cockroachdb/docs">
-                  <span class="text-normal">cockroachdb /</span> docs
-                </a>
-              </h5>
-              <p class="card-text">CockroachDB user documentation</p>
-            </div>
-            <div class="card-footer text-muted">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/cockroachdb/docs" data-icon="octicon-star" data-show-count="true" aria-label="Star cockroachdb/docs on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/cloud-elements/devportal">
-                  <span class="text-normal">cloud-elements /</span> devportal
-                </a>
-              </h5>
-              <p class="card-text">Cloud Elements developer portal</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/cloud-elements/devportal" data-icon="octicon-star" data-show-count="true"
-                aria-label="Star cloud-elements/devportal on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/alphagov/govuk-developer-docs">
-                  <span class="text-normal">alphagov /</span> developer-docs
-                </a>
-              </h5>
-              <p class="card-text">Tech docs for everyone working on GOV.UK</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/alphagov/govuk-developer-docs" data-icon="octicon-star" data-show-count="true"
-                aria-label="Star alphagov/govuk-developer-docs on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/writethedocs/www">
-                  <span class="text-normal">writethedocs /</span> www
-                </a>
-              </h5>
-              <p class="card-text">The main website for Write the Docs.</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/writethedocs/www" data-icon="octicon-star" data-show-count="true" aria-label="Star writethedocs/www on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/testthedocs/redactor">
-                  <span class="text-normal">testthedocs /</span> redactor
-                </a>
-              </h5>
-              <p class="card-text">Documentation Quality Assurance Framework</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/testthedocs/redactor" data-icon="octicon-star" data-show-count="true" aria-label="Star testthedocs/redactor on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item col-md-4">
-          <div class="card showcase-card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/alphagov/re-team-manual">
-                  <span class="text-normal">alphagov /</span> re-team-manual
-                </a>
-              </h5>
-              <p class="card-text">Team manual for Reliability Engineering and its sub-teams.</p>
-            </div>
-            <div class="card-footer">
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/alphagov/re-team-manual" data-icon="octicon-star" data-show-count="true"
-                aria-label="Star alphagov/re-team-manual on GitHub">Star</a>
-              <a href="https://github.com/ValeLint/vale" class="badge badge-primary float-right">Vale</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 <section class="bg-white">
   <div class="container u-space-3">
     <span class="title-decorative text-center">What we do</span>
@@ -217,5 +63,47 @@
     </div>
   </div>
 </section>
-<!--end of section-->
+
+<section class="bg-dark">
+  <div class="container">
+    <div class="row justify-content-center text-center section-intro">
+      <div class="col-12 col-md-9 col-lg-8">
+        <span class="title-decorative">Who we help</span>
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+  <div class="main-carousel" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":false, "wrapAround":true, "autoPlay":4000, "imagesLoaded":true }'>
+
+    <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
+      <a href="https://github.com/linode/docs" class="d-block mb-3">
+        <img alt="Image" src="/img/linode.png" class="img-fluid rounded" />
+      </a>
+      <span class="h6"><i class="fab fa-github"></i> linode / docs</span>
+    </div>
+
+    <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
+      <a href="https://github.com/cockroachdb/docs" class="d-block mb-3">
+        <img alt="Image" src="/img/cockroach.png" class="img-fluid rounded" />
+      </a>
+      <span class="h6"><i class="fab fa-github"></i> cockroachdb / docs</span>
+    </div>
+
+    <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
+      <a href="https://github.com/writethedocs/www" class="d-block mb-3">
+        <img alt="Image" src="/img/www.png" class="img-fluid rounded" />
+      </a>
+      <span class="h6"><i class="fab fa-github"></i> writethedocs / www</span>
+    </div>
+
+    <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
+      <a href="https://github.com/alphagov/govuk-developer-docs" class="d-block mb-3">
+        <img alt="Image" src="/img/gov.png" class="img-fluid rounded" />
+      </a>
+      <span class="h6"><i class="fab fa-github"></i> alphagov / govuk-developer-docs</span>
+    </div>
+  </div>
+</section>
 {{ end }}
