--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-darkish text-light footer-long">
+<footer class="bg-gray text-light footer-long">
 <div class="container">
   <div class="row">
     <div class="col-md-4 ml-auto mb-5">
