--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,7 +22,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/errata-ai">
-                <span class="socicon-github"></span>
+                <i class="fab fa-github"></i>
               </a>
             </li>
           </ul>
