[WIP] About page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,8 +34,8 @@
       <div class="col-md-4 mb-7">
         <!-- Icon Blocks -->
         <div class="text-center px-lg-3">
-          <a href=""><img src="/img/integrate.svg" alt=""></a>
-          <h3 class="h5"><a href="">Integration assistence</a></h3>
+          <a href="/about/#tech"><img src="/img/integrate.svg" alt=""></a>
+          <h3 class="h5"><a href="/about/#tech">Integration assistence</a></h3>
           <p class="mb-md-0">
             We'll help you get set up&mdash;static site generators, CI/CD, etc.
           </p>
