--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,8 +46,8 @@
       <div class="col-md-4 mb-7">
         <!-- Icon Blocks -->
         <div class="text-center px-lg-3">
-          <a href=""><img src="/img/support.svg" alt=""></a>
-          <h3 class="h5"><a href="">Customization</a></h3>
+          <a href="/about/#customization"><img src="/img/support.svg" alt=""></a>
+          <h3 class="h5"><a href="/about/#customization">Customization</a></h3>
           <p class="mb-md-0">
             We'll work with you to find configuration settings that meet <i>your</i> needs.
           </p>
