--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse justify-content-between navbar-right" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/about/" class="nav-link">Services</a>
+              <a href="/about/" class="nav-link">About</a>
             </li>
             <li class="nav-item">
               <a href="/software/" class="nav-link">Software</a>
