Add typeform link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
           We specialize in
           <span id="heading"></span>
         </span>
-        <a href="#" class="btn btn-primary btn-lg">Get started now</a>
+        <a href="/about/" class="btn btn-primary btn-lg">Get started now</a>
       </div>
     </div>
   </div>
