--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,6 +13,8 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="/js/typewriter.js"></script>
+  <script type="text/javascript" src="/js/typewrite.js"></script>
 </section>
 
 <section class="bg-white">
