Update link to About

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
         <!-- Icon Blocks -->
         <div class="text-center px-lg-3">
           <a href="/about/#tech"><img src="/img/integrate.svg" alt=""></a>
-          <h3 class="h5"><a href="/about/#tech">Integration assistence</a></h3>
+          <h3 class="h5"><a href="/about/">Integration assistence</a></h3>
           <p class="mb-md-0">
             We'll help you get set up&mdash;static site generators, CI/CD, etc.
           </p>
