WIP: Vale Server

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,8 +22,8 @@
                         <p class="text-small text-muted">A fast, syntax-aware linter for prose.</p>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">
-                        <span class="h6 mb-0">Vale Server <span class="badge badge-secondary">Coming soon!</span></span>
+                    <a class="dropdown-item" href="/vale-server/">
+                        <span class="h6 mb-0">Vale Server <span class="badge badge-primary">Beta</span></span>
                         <p class="text-small text-muted">Use Vale with your favorite writing apps.</p>
                     </a>
                 </div>
