--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,43 +6,18 @@
 /*  in your page by adding a reference to assets/css/custom.css in the head of each page.
 /*
 */
-.popover-hotspot {
-    cursor: pointer;
-    height: 2.25rem;
-    width: 2.25rem;
-    border-radius: 50%;
-    position: absolute;
-    -webkit-animation: hotspotPulse 2s ease infinite alternate;
-    animation: hotspotPulse 2s ease infinite alternate;
-}
-.shape-blur-4 {
-    top: 0;
-    bottom: 0;
-    left: 50%;
-}
-.shape-fluid-y {
-    width: 100%;
-    pointer-events: none;
-}
-.shape {
-    position: absolute;
-}
-
-.img-skewed-left {
-    perspective-origin: 0;
-}
-.img-skewed {
-    perspective: 1500px;
-}
-
-.img-skewed-left .img-skewed-item {
-    /*transform: rotateY(-35deg) rotateX(10deg);*/
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-.screenshot {
-    border-radius: .625rem;
-    box-shadow: 25px 60px 125px -25px rgba(80,102,144,.1), 16px 40px 75px -40px rgba(0,0,0,.2);
+.video-container {
+    position: relative;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    box-shadow: 0px 10px 31px 10px rgba(0,0,0, 0.4);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8 px;
+    width: 505px;
+    height: 614px;
+    overflow: hidden;
+    margin: 0 auto;
 }
 
 .my-3 {
