--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,13 @@
 /*  in your page by adding a reference to assets/css/custom.css in the head of each page.
 /*
 */
+
+ body{
+     width:100%;
+     height:100%;
+     overflow-x: hidden;
+ }
+
 @media (min-width: 768px) {
   .img-caption {
       margin-left: 5em;
