--- a/static/css/popimg.css
+++ b/static/css/popimg.css
@@ -6,5 +6,10 @@
     height: 2.25rem;
     width: 2.25rem;
     border-radius: 50%;
+    line-height: 34px;
     position: absolute;
+    text-align:center;
+    vertical-align:middle;
+    display:inline-block;
 }
+.fa-info { line-height: inherit;}
