--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,8 +40,8 @@ body{
 
 .CircleBadge-icon {
     height: auto!important;
-    max-height: 100%!important;
-    max-width: 100%!important;
+    max-height: 100%;
+    max-width: 100%;
     background-color: #fff;
     /*background-color: #f8f9fa;*/
 }
