--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,7 +26,10 @@
                     </a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/vale-server/">
-                        <span class="h6 mb-0">Vale Server <span class="badge badge-primary">Beta</span></span>
+                        <span class="h6 mb-0">
+                          Vale Server
+                          <img alt="GitHub release" src="https://img.shields.io/github/release/errata-ai/vale-server.svg?label=%20&style=social">
+                        </span>
                         <p class="text-small text-muted">Use Vale with your favorite writing apps.</p>
                     </a>
                 </div>
