--- a/layouts/index.html
+++ b/layouts/index.html
@@ -161,7 +161,7 @@
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
-        <a href="pages-app.html" class="card">
+        <a href="https://staticschool.com/" class="card">
           <img
             alt="An image of Static School's homepage"
             src="/img/screenshots/static-school.png"
@@ -170,11 +170,11 @@
         </a>
         <h5>Static School</h5>
         <p>Discover, explore, and compare static site generators and related Jamstack software.</p>
-        <a href="pages-app.html">Learn more &rsaquo;</a>
+        <a href="https://staticschool.com/">Learn more &rsaquo;</a>
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
-        <a href="pages-inner.html" class="card">
+        <a href="https://github.com/errata-ai/vale" class="card">
           <img
             alt="An image of Vale running in Terminal"
             src="/img/screenshots/vale.png"
@@ -183,7 +183,7 @@
         </a>
         <h5>Vale</h5>
         <p>A syntax-aware, command-line linter for prose built with speed and extensibility in mind.</p>
-        <a href="pages-inner.html">Learn more &rsaquo;</a>
+        <a href="https://github.com/errata-ai/vale">Learn more &rsaquo;</a>
       </li>
       <!--end of col-->
     </ul>
