--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,6 +40,12 @@
         <!-- Required theme scripts (Do not remove) -->
         <script type="text/javascript" src="/js/theme.js"></script>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js" integrity="sha256-sPB0F50YUDK0otDnsfNHawYmA5M0pjjUf4TvRJkGFrI=" crossorigin="anonymous"></script>
+
+        {{- range .Params.js }}
+          <script src="/js/{{ . }}"></script>
+        {{- end }}
+
         {{ block "script" . }}{{ end }}
     </body>
 </html>
