Update Vale Server page
Signed-off-by: Joseph Kato <joseph@jdkato.io>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,5 +47,14 @@
         {{- end }}
 
         {{ block "script" . }}{{ end }}
+
+        <script type="text/javascript">
+          $(function () {
+            $('[data-toggle="popover"]').popover()
+          })
+          $('.popover-dismiss').popover({
+            trigger: 'focus'
+          })
+        </script>
     </body>
 </html>
