--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black text-light footer-long">
+<footer class="bg-dark footer-long">
 <div class="container">
   <div class="row ml-auto">
     <div class="col-md-4 mb-5">
@@ -25,7 +25,7 @@
         <li class="mb-2">
           <h6 class="text-uppercase">Stay in the loop!</h6>
         </li>
-        <li class="text-muted">
+        <li>
           Join our mailing list to receive updates and announcements.
         </li>
       </ul>
