--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
       <div class="col-12 col-md-9 col-lg-8 text-center">
         <h1 class="display-4">Innovative tools for collaborative writing</h1>
         <span class="lead">
-            At <b>errata.ai</b>, we develop software to help writers maintain
+            At <strong>errata.ai</strong>, we develop software to help writers maintain
             on-brand, consistent, and mistake-free content using modern
             <i>docs-as-code</i> principles.
         </span>
@@ -90,54 +90,6 @@
     </div>
 </section>
 
-<section class="bg-white">
-  <div class="container">
-    <div class="row justify-content-center text-center section-intro">
-      <div class="col-12 col-md-9 col-lg-8">
-        <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">See how our software is being used</span>
-        <h2 class="display-5" data-aos="fade-up" data-aos-delay="100">Trusted by industry professionals around the globe</h2>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-        <div class="card">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4CQsrjoEWYY"></iframe>
-          </div>
-          <div class="card-footer text-muted">
-            Learn about how <a href="https://pronovix.com/blog/how-improve-docops-using-cicd-and-docs-code"><b>Pronovix</b> uses Vale</a> in a CI/CD workflow
-            to help manage their documentation.
-          </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-          <a href="https://www.linode.com/blog/linode/docs-as-code-at-linode/">
-              <img class="card-img-top" src="/img/screenshots/linode.png" alt="Linode's blog post banner image" />
-          </a>
-          <div class="card-body">
-            <p class="card-text text-muted">
-                Read about how <a href="https://www.linode.com/blog/linode/docs-as-code-at-linode/"><b>Linode</b> uses Vale</a> to help maintain their library
-                of over 1,400 guides and tutorials.
-            </p>
-          </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-              <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sWaHa_wQv3M"></iframe>
-          </div>
-          <div class="card-footer text-muted">
-            Learn about how <a href="https://our.umbraco.com/documentation/Contribute/Style-Guide/"><b>Umbraco</b> uses Vale</a>
-            to help maintain their GitHub-hosted content.
-          </div>
-        </div>
-    </div>
-    </div>
-  </div>
-</section>
-
 <section id="projects" class="bg-white">
   <div class="container">
     <div class="row justify-content-center text-center section-intro">
@@ -150,10 +102,10 @@
       </div>
     </div>
 
-    <ul class="row feature-list feature-list-sm">
+    <ul class="row h-25 feature-list feature-list-sm">
       <li class="col-12 col-md-4">
         <a href="vale-server" class="card">
-          <img alt="An image of Vale Server's homepage" src="/img/screenshots/vale-server.png" class="img-fluid rounded img-thumbnail"/>
+          <img alt="An image of Vale Server's homepage" src="/img/screenshots/vale.png" class="img rounded img-thumbnail"/>
         </a>
         <h5>Vale Server</h5>
         <p>A cross-platform desktop application that brings your editorial style guide to life.</p>
@@ -161,16 +113,16 @@
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
-        <a href="https://staticschool.com/" class="card">
+        <a href="https://vale-studio.errata.ai/" class="card">
           <img
-            alt="An image of Static School's homepage"
-            src="/img/screenshots/static-school.png"
-            class="img-fluid rounded"
+            alt="An image of Vale Studio's homepage"
+            src="/img/screenshots/vale-studio.png"
+            class="img img-thumbnail rounded"
           />
         </a>
-        <h5>Static School</h5>
-        <p>Discover, explore, and compare static site generators and related Jamstack software.</p>
-        <a href="https://staticschool.com/">Learn more &rsaquo;</a>
+        <h5>Vale Studio</h5>
+        <p>An online tool to build, test, and share Vale- and Vale Server-compatible rules.</p>
+        <a href="https://vale-studio.errata.ai/">Learn more &rsaquo;</a>
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
@@ -178,7 +130,7 @@
           <img
             alt="An image of Vale running in Terminal"
             src="/img/screenshots/vale.png"
-            class="img-fluid rounded"
+            class="img img-thumbnail rounded"
           />
         </a>
         <h5>Vale</h5>
