--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,51 +1,86 @@
-<div class="navbar-container">
-  <div id="main-nav" class="bg-white navbar-light">
-    <div class="container">
-      <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="/">
-          <img alt="errata.ai's logo" src="/img/logo.png" class="logo"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="icon-menu h4"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="/about" class="nav-link">About</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Software</a>
-                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <a class="dropdown-item" href="/vale-server">
-                        <span class="h6 mb-0">
-                          Vale Server
-                          <img alt="GitHub release" src="https://img.shields.io/github/release/errata-ai/vale-server.svg?label=%20&style=social">
-                        </span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://staticschool.com/" target="_blank">
-                        <span class="h6 mb-0">
-                          Static School
-                          <img alt="GitHub release" src="https://img.shields.io/github/release/errata-ai/static-school.svg?label=%20&style=social">
-                        </span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://github.com/errata-ai/vale" target="_blank">
-                        <span class="h6 mb-0">
-                          Vale
-                          <img alt="GitHub release" src="https://img.shields.io/github/release/errata-ai/vale.svg?label=%20&style=social">
-                        </span>
-                    </a>
-                </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/errata-ai"><i class="fab fa-github"></i> GitHub</a>
-            </li>
-          </ul>
-        </div>
-        <!--end nav collapse-->
-      </nav>
+<div id="main-nav" class="bg-white navbar-light">
+  <nav class="navbar navbar-expand-sm">
+    <a class="navbar-brand" href="/">
+      <img alt="errata.ai's logo" src="/img/logo.svg" class="logo" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="icon-menu h4"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="pagesDropdown"
+            role="button"
+            data-toggle="dropdown"
+            >Software</a
+          >
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <a class="dropdown-item" href="/vale-server">
+              <span class="h6 mb-0">
+                Vale Server
+                <img
+                  alt="GitHub release"
+                  src="https://img.shields.io/github/release/errata-ai/vale-server.svg?label=%20&style=social"
+                />
+              </span>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a
+              class="dropdown-item"
+              href="https://github.com/errata-ai/vale"
+              target="_blank"
+            >
+              <span class="h6 mb-0">
+                Vale CLI
+                <img
+                  alt="GitHub release"
+                  src="https://img.shields.io/github/release/errata-ai/vale.svg?label=%20&style=social"
+                />
+              </span>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a
+              class="dropdown-item"
+              href="https://vale-studio.errata.ai/"
+              target="_blank"
+            >
+              <span class="h6 mb-0">
+                Vale Studio
+                <img
+                  alt="GitHub release"
+                  src="https://img.shields.io/github/release/errata-ai/static-school.svg?label=%20&style=social"
+                />
+              </span>
+            </a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/manage"
+            >Manage</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/errata-ai"
+            ><i class="fab fa-github"></i> GitHub</a
+          >
+        </li>
+      </ul>
     </div>
-    <!--end of container-->
-  </div>
+    <!--end nav collapse-->
+  </nav>
+  <!--end of container-->
 </div>
