--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,34 +8,86 @@
 */
 
 body {
-  font-family: 'Inter', sans-serif;
-  color: #506690 !important;
+  font-family: "Inter", sans-serif;
+  color: #333 !important;
+  background-color: #fff;
+}
+
+footer {
+  border-top: 1px solid #e8e8e8;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #0088cc;
+  border-color: #0088cc;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #006fa6;
+  border-color: #006699;
+}
+a,
+.btn-link {
+  color: #75b8f7;
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover,
+.btn-link:hover {
+  color: #005580;
+  text-decoration: underline;
 }
 
 a.card {
-    color: #506690;
+  color: #506690;
 }
 
-.text-muted, .title-decorative {
-    color: #869ab8!important;
+.title-decorative {
+  color: #8c8c8c !important;
 }
 
-.bg-black {
-    background-color: #161c2d!important;
-    color: rgba(134,154,184,.8)!important;
+.pointer {
+  cursor: pointer;
 }
 
-.bg-black h1, .bg-black h2, .bg-black h3, .bg-black h4, .bg-black h5 {
-    color: white !important;
+.bg-light {
+  background-color: #f6f6f6 !important;
+}
+
+.bg-dark {
+  background-color: #182431 !important;
+}
+
+.text-dark {
+  color: #212529 !important;
 }
 
 .scolled {
-    box-shadow: 0 1px 1px rgba(0,0,0,.3);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .screenshot {
-    border-radius: .625rem;
-    box-shadow: 25px 60px 125px -25px rgba(80, 102, 144, .1), 16px 40px 75px -40px rgba(0, 0, 0, .2)
+  border-radius: 0.625rem;
+  box-shadow: 25px 60px 125px -25px rgba(80, 102, 144, 0.1),
+    16px 40px 75px -40px rgba(0, 0, 0, 0.2);
 }
 
 /* Tech stack gallery */
@@ -44,163 +96,166 @@ a.card {
   padding-top: 50%;
 }
 .gallery {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    -webkit-column-width: 50%;
-    -moz-column-width: 50%;
-    column-width: 50%; }
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-width: 50%;
+  -moz-column-width: 50%;
+  column-width: 50%;
+}
 .gallery .pics {
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease; }
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease;
+}
 .gallery .animation {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1); }
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
 
 /* Vale Server client logos */
 
 .CircleBadge-icon {
-    height: auto!important;
-    max-height: 100%;
-    max-width: 100%;
-    background-color: #161c2d;
-    /*background-color: #f8f9fa;*/
+  height: auto !important;
+  max-height: 100%;
+  max-width: 100%;
+  background-color: #fff;
+  /*background-color: #f8f9fa;*/
 }
 .CircleBadge--feature {
-    position: relative;
-    top: 0;
-    transition: top .15s ease-in,box-shadow .12s ease-in;
+  position: relative;
+  top: 0;
+  transition: top 0.15s ease-in, box-shadow 0.12s ease-in;
 }
 .CircleBadge--medium {
-    height: 96px;
-    width: 96px;
+  height: 96px;
+  width: 96px;
 }
 .CircleBadge {
-    align-items: center;
-    background-color: #fff;
-    border-radius: 50%;
-    /*box-shadow: 0 1px 5px rgba(27,31,35,.15);*/
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 50%;
+  /*box-shadow: 0 1px 5px rgba(27,31,35,.15);*/
+  display: flex;
+  justify-content: center;
 }
 .apps-cluster .CircleBadge {
-    margin: 16px;
+  margin: 16px;
 }
 .d-flex {
-    display: flex!important;
+  display: flex !important;
 }
 .flex-justify-center {
-    justify-content: center!important;
+  justify-content: center !important;
 }
 .flex-wrap {
-    flex-wrap: wrap!important;
+  flex-wrap: wrap !important;
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge:nth-child(2n) {
-      animation-duration: 6s;
-      margin-top: 24px;
+    animation-duration: 6s;
+    margin-top: 24px;
   }
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge:nth-child(2n) {
-      animation-duration: 6s;
-      margin-top: 24px;
+    animation-duration: 6s;
+    margin-top: 24px;
   }
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge {
-      position: relative;
+    position: relative;
   }
 }
 .apps-cluster .CircleBadge {
-    margin: 16px;
+  margin: 16px;
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge:nth-child(odd) {
-      animation-delay: 1.5s;
-      animation-direction: reverse;
-      margin-top: -24px;
+    animation-delay: 1.5s;
+    animation-direction: reverse;
+    margin-top: -24px;
   }
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge:nth-child(odd) {
-      animation-delay: 1.5s;
-      animation-direction: reverse;
-      margin-top: -24px;
+    animation-delay: 1.5s;
+    animation-direction: reverse;
+    margin-top: -24px;
   }
 }
 @media (min-width: 1012px) {
   .apps-cluster .CircleBadge {
-      position: relative;
+    position: relative;
   }
 }
 .apps-cluster .CircleBadge {
-    margin: 16px;
+  margin: 16px;
 }
 
 /* Skewed images */
 
 .img-skewed {
-    -webkit-perspective: 1500px;
-    perspective: 1500px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d
+  -webkit-perspective: 1500px;
+  perspective: 1500px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
 .img-skewed-left {
-    -webkit-perspective-origin: left center;
-    perspective-origin: left center
+  -webkit-perspective-origin: left center;
+  perspective-origin: left center;
 }
 
 .img-skewed-left .img-skewed-item {
-    -webkit-transform: rotateY(-35deg) rotateX(15deg);
-    transform: rotateY(-35deg) rotateX(15deg);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden
+  -webkit-transform: rotateY(-35deg) rotateX(15deg);
+  transform: rotateY(-35deg) rotateX(15deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .img-skewed-right {
-    -webkit-perspective-origin: right center;
-    perspective-origin: right center
+  -webkit-perspective-origin: right center;
+  perspective-origin: right center;
 }
 
 .img-skewed-right .img-skewed-item {
-    -webkit-transform: rotateY(35deg) rotateX(15deg);
-    transform: rotateY(35deg) rotateX(15deg);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden
+  -webkit-transform: rotateY(35deg) rotateX(15deg);
+  transform: rotateY(35deg) rotateX(15deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /* Timeline */
 
 ul.timeline {
-    list-style-type: none;
-    position: relative;
+  list-style-type: none;
+  position: relative;
 }
 ul.timeline:before {
-    content: ' ';
-    background: #d4d9df;
-    display: inline-block;
-    position: absolute;
-    left: 29px;
-    width: 2px;
-    height: 100%;
-    z-index: 400;
+  content: " ";
+  background: #d4d9df;
+  display: inline-block;
+  position: absolute;
+  left: 29px;
+  width: 2px;
+  height: 100%;
+  z-index: 400;
 }
 ul.timeline > li {
-    margin: 20px 0;
-    padding-left: 20px;
+  margin: 20px 0;
+  padding-left: 20px;
 }
 ul.timeline > li:before {
-    content: ' ';
-    background: white;
-    display: inline-block;
-    position: absolute;
-    border-radius: 50%;
-    border: 3px solid #161c2d;
-    left: 20px;
-    width: 20px;
-    height: 20px;
-    z-index: 400;
+  content: " ";
+  background: white;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 3px solid #161c2d;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  z-index: 400;
 }
