--- a/layouts/index.html
+++ b/layouts/index.html
@@ -105,7 +105,7 @@
     <ul class="row h-25 feature-list feature-list-sm">
       <li class="col-12 col-md-4">
         <a href="vale-server" class="card">
-          <img alt="An image of Vale Server's homepage" src="/img/screenshots/vale.png" class="img rounded img-thumbnail"/>
+          <img alt="An image of Vale Server's homepage" src="/img/screenshots/vale-server.png" class="img rounded img-thumbnail"/>
         </a>
         <h5>Vale Server</h5>
         <p>A cross-platform desktop application that brings your editorial style guide to life.</p>
