Remove unused JS
Signed-off-by: Joseph Kato <joseph@jdkato.io>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,17 +20,17 @@
         <!-- AOS (Animate On Scroll - animates elements into view while scrolling down) -->
         <script type="text/javascript" src="/js/aos.js"></script>
         <!-- Flatpickr (calendar/date/time picker UI) -->
-        <script type="text/javascript" src="/js/flatpickr.min.js"></script>
+        <!-- <script type="text/javascript" src="/js/flatpickr.min.js"></script> -->
         <!-- Flickity (handles touch enabled carousels and sliders) -->
-        <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script>
+        <!-- <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script> -->
         <!-- jarallax (parallax effect and video backgrounds) -->
-        <script type="text/javascript" src="/js/jarallax.min.js"></script>
-        <script type="text/javascript" src="/js/jarallax-video.min.js"></script>
-        <script type="text/javascript" src="/js/jarallax-element.min.js"></script>
+        <!-- <script type="text/javascript" src="/js/jarallax.min.js"></script> -->
+        <!-- <script type="text/javascript" src="/js/jarallax-video.min.js"></script> -->
+        <!-- <script type="text/javascript" src="/js/jarallax-element.min.js"></script> -->
         <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
         <script type="text/javascript" src="/js/scrollMonitor.js"></script>
         <!-- jQuery smartWizard facilitates steppable wizard content -->
-        <script type="text/javascript" src="/js/jquery.smartWizard.min.js"></script>
+        <!-- <script type="text/javascript" src="/js/jquery.smartWizard.min.js"></script> -->
         <!-- Smooth scroll (animation to links in-page)-->
         <script type="text/javascript" src="/js/smooth-scroll.polyfills.min.js"></script>
         <!-- Prism (displays formatted code boxes) -->
