remove vale-server page for now

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -104,12 +104,12 @@
 
     <ul class="row h-25 feature-list feature-list-sm">
       <li class="col-12 col-md-4">
-        <a href="vale-server" class="card">
+        <a href="https://docs.errata.ai/vale-server/install/" class="card">
           <img alt="An image of Vale Server's homepage" src="/img/screenshots/vale-server.png" class="img rounded img-thumbnail"/>
         </a>
         <h5>Vale Server</h5>
         <p>A cross-platform desktop application that brings your editorial style guide to life.</p>
-        <a href="vale-server">Learn more &rsaquo;</a>
+        <a href="https://docs.errata.ai/vale-server/install/">Learn more &rsaquo;</a>
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
