--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,7 +29,7 @@
             >Software</a
           >
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <a class="dropdown-item" href="/vale-server">
+            <a class="dropdown-item" href="https://docs.errata.ai/vale-server/install/">
               <span class="h6 mb-0">
                 Vale Server
                 <img
